# QtPdfView

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: icons.qrc
src/: MainWindow.cpp  MainWindow.h  MiniMapWidget.cpp  MiniMapWidget.h  SearchMinimapPanel.cpp  SearchMinimapPanel.h  SecretSearchPanel.cpp  SecretSearchPanel.h  SelectablePdfView.cpp  SelectablePdfView.h  main.cpp
